--- a/ngTrainingApp/src/app/app.component.html
+++ b/ngTrainingApp/src/app/app.component.html
@@ -6,9 +6,10 @@
             <hr>
             <!-- <app-servers></app-servers> -->
             <!-- <span app-servers></span> -->
-        <div class="app-servers"></div>
+        <!-- <div class="app-servers"></div>
         <app-warning-alert></app-warning-alert>
-        <app-success-alert></app-success-alert>
+        <app-success-alert></app-success-alert> -->
+        <app-login></app-login>
         </div>
     </div>
 </div>
