--- a/ngTrainingApp/src/app/server/server.component.html
+++ b/ngTrainingApp/src/app/server/server.component.html
@@ -1,3 +1,5 @@
 
 
-<p> server with id {{ serverID }} is {{ getServerStatus() }} </p>
+<p [ngStyle]="{backgroundColor:getColor() } "
+[ngClass]="{online:serverStatus==='online'}"
+> server with id {{ serverID }} is {{ getServerStatus() }} </p>
