--- a/ngTrainingApp/src/app/app.component.html
+++ b/ngTrainingApp/src/app/app.component.html
@@ -9,7 +9,8 @@
         <!-- <div class="app-servers"></div>
         <app-warning-alert></app-warning-alert>
         <app-success-alert></app-success-alert> -->
-        <app-login></app-login>
+        <!-- <app-login></app-login> -->
+        <app-details></app-details>
         </div>
     </div>
 </div>
