--- a/ngTrainingApp/src/app/userdetails/details.component.html
+++ b/ngTrainingApp/src/app/userdetails/details.component.html
@@ -1,4 +1,5 @@
 <button class=" btn btn-primary" (click)="onToggleDetails()">Toggle Details</button>
 <p *ngIf="!Status"> helo passage detaukjksm,</p>
-<div *ngFor="let lg of log">
-    <p [ngStyle]="{backgroundColor:lg>=5?'blue':'transperant'}">{{ lg }}</p></div>
+<div *ngFor="let lg of log; let i=index">
+    <p [ngStyle]="{backgroundColor:i>=4?'blue':'transperant'}">{{ lg }}</p>
+</div>
