--- a/courseProject/src/app/recipe/recipe-detail/recipe-detail.component.html
+++ b/courseProject/src/app/recipe/recipe-detail/recipe-detail.component.html
@@ -1,16 +1,16 @@
 <div class="row">
     <div class="col-xs-12">
-        <img src="" alt="" class="img-responsive">
+        <img [src]="recipeClicked.imageUrl" style="max-height: 300px" [alt]="recipeClicked.name" class="img-responsive">
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <h4>recipe name</h4>
+        <h4>{{recipeClicked.name}}</h4>
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <div class="btn-group">
+        <div class=" btn btn-group">
             <button type="button" class="btn btn-primary dropdown-togggle">
                 Manage Recipe <span class="caret"></span>
             </button>
@@ -24,7 +24,7 @@
 </div>
 <div class="row">
     <div class="col-xs-12">
-        description
+        {{recipeClicked.description}}
     </div>
 </div>
 <div class="row">
