--- a/courseProject/src/app/recipe/recipe.component.html
+++ b/courseProject/src/app/recipe/recipe.component.html
@@ -1,8 +1,9 @@
 <div class="row">
     <div class="col-md-5">
-        <app-recipe-list></app-recipe-list>
+        <app-recipe-list (recipeClicked)="onRecipeClick($event)"></app-recipe-list>
     </div>
     <div class="col-md-7">
-        <app-recipe-detail></app-recipe-detail>
+        <app-recipe-detail [recipeClicked]="recipeSelected" *ngIf="recipeSelected; else noneSelected" ></app-recipe-detail>
+        <ng-template #noneSelected><span class=" alert alert-info">select a recipe!</span> </ng-template>
     </div>
 </div>
