--- a/courseProject/src/app/shoppinglist/shopinglist-edit/shopinglist-edit.component.html
+++ b/courseProject/src/app/shoppinglist/shopinglist-edit/shopinglist-edit.component.html
@@ -4,16 +4,16 @@
             <div class="row">
                 <div class="col-sm-5 form-group">
                     <label for="name">Name</label>
-                    <input type="text" class="form-control" id="name">
+                    <input type="text" class="form-control" id="name" #ingName>
                 </div>
                 <div class="col-sm-2 form-group">
                     <label for="amount">Amount</label>
-                    <input type="number" class="form-group" id="amount">
+                    <input type="number" class="form-group" id="amount" #ingAmount>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <button type="submit" class="btn btn-success">Add</button>
+                    <button type="submit" class="btn btn-success" (click)="onAddClick(ingName)">Add</button>
                     <button type="button" class="btn btn-danger">Delete</button>
                     <button type="reset" class="btn btn-primary">Clear</button>
                 </div>
