--- a/courseProject/src/app/recipe/recipe-list/recipe-list.component.html
+++ b/courseProject/src/app/recipe/recipe-list/recipe-list.component.html
@@ -6,6 +6,6 @@
 <hr>
 <div class="row">
     <div class="col-xs-12"> 
-        <app-recipe-item *ngFor="let rec of recipes" [recipe]="rec" (recipeSelected)="onRecipeSelected(rec)" ></app-recipe-item>
+        <app-recipe-item *ngFor="let rec of recipes" [recipe]="rec" ></app-recipe-item>
     </div>
 </div>
