--- a/courseProject/src/app/shoppinglist/shoppinglist.component.html
+++ b/courseProject/src/app/shoppinglist/shoppinglist.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-10">
-        <app-shopinglist-edit (ingredientAdded)="onIngredientAdded($event)"></app-shopinglist-edit>
+        <app-shopinglist-edit ></app-shopinglist-edit>
         <hr>
         <ul class="list-group">
             <a  class="list-group-item" style="cursor: pointer" *ngFor="let ing of ingredient">
