--- a/courseProject/src/app/app.component.html
+++ b/courseProject/src/app/app.component.html
@@ -1,9 +1,8 @@
-<app-header (menuClicked)="navigate($event)"></app-header>
+<app-header></app-header>
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <app-recipe *ngIf="feature==='Recipe'"></app-recipe>
-      <app-shoppinglist *ngIf="feature==='ShoppingList'"></app-shoppinglist>
+    <router-outlet></router-outlet>
     </div>
   </div>
 </div>
