--- a/courseProject/src/app/recipe/recipe-detail/recipe-detail.component.html
+++ b/courseProject/src/app/recipe/recipe-detail/recipe-detail.component.html
@@ -1,11 +1,11 @@
 <div class="row">
     <div class="col-xs-12">
-        <img [src]="recipeClicked.imageUrl" style="max-height: 300px" [alt]="recipeClicked.name" class="img-responsive">
+        <img [src]="recipe.imageUrl" style="max-height: 300px" [alt]="recipe.name" class="img-responsive">
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <h4>{{recipeClicked.name}}</h4>
+        <h4>{{recipe.name}}</h4>
     </div>
 </div>
 <div class="row">
@@ -15,22 +15,22 @@
                 Manage Recipe <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
-                <li><a href="#" style="cursor: pointer" (click)="onAddtoShoppingLIst()">To Shopping Cart </a></li>
-                <li><a href="#">Edit Recipe</a></li>
-                <li><a href="#">Delete Recipe</a></li>
+                <li><a  style="cursor: pointer" (click)="onAddtoShoppingLIst()">To Shopping Cart </a></li>
+                <li><a  style="cursor: pointer" (click)="editRecipe()">Edit Recipe</a></li>
+                <li><a  style="cursor: pointer">Delete Recipe</a></li>
             </ul>
         </div>
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12">
-        {{recipeClicked.description}}
+        {{recipe.description}}
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12">
         <ul class="list-group">
-            <li  class="list-group-item" *ngFor="let ings of recipeClicked.ingredients">
+            <li  class="list-group-item" *ngFor="let ings of recipe.ingredients">
                 {{ings.name}} ({{ings.amount}})
             </li>
         </ul>
