--- a/courseProject/src/app/recipe/recipe-list/recipe-list.component.html
+++ b/courseProject/src/app/recipe/recipe-list/recipe-list.component.html
@@ -1,11 +1,11 @@
 <div class="row">
     <div class="col-xs-12">
-        <button class="btn btn-primary">Add Recipe</button>
+        <button class="btn btn-primary" (click)="addRecipe()">Add Recipe</button>
     </div>
 </div>
 <hr>
 <div class="row">
     <div class="col-xs-12"> 
-        <app-recipe-item *ngFor="let rec of recipes" [recipe]="rec" ></app-recipe-item>
+        <app-recipe-item *ngFor="let rec of recipes; let i=index" [recipe]="rec" [index]="i"  ></app-recipe-item>
     </div>
 </div>
