--- a/courseProject/src/app/shoppinglist/shoppinglist.component.html
+++ b/courseProject/src/app/shoppinglist/shoppinglist.component.html
@@ -3,7 +3,8 @@
         <app-shopinglist-edit ></app-shopinglist-edit>
         <hr>
         <ul class="list-group">
-            <a  class="list-group-item" style="cursor: pointer" *ngFor="let ing of ingredient">
+            <a  class="list-group-item" style="cursor: pointer" *ngFor="let ing of ingredient;let i=index"
+            (click)="onEditItem(i)">
                 {{ ing.name }}({{ ing.amount }})
             </a>
         </ul>
