--- a/courseProject/src/app/header/header.component.html
+++ b/courseProject/src/app/header/header.component.html
@@ -5,11 +5,13 @@
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li routerLinkActive="active"><a [routerLink]="['/recipe']">Recipe</a></li>
+                <li routerLinkActive="active" *ngIf="isAuthenticated"><a [routerLink]="['/recipe']" >Recipe</a></li>
                 <li routerLinkActive="active"><a [routerLink]="['/shoppingList']">Shopping List</a></li>
+                <li routerLinkActive="active" *ngIf="!isAuthenticated"><a [routerLink]="['/authenticate']">Authenticate</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown " appDropdown>
+                <li *ngIf="isAuthenticated"><a style="cursor: pointer" (click)="onLoggingOut()">Log Out</a></li>
+                <li class="dropdown " appDropdown *ngIf="isAuthenticated">
                     <a class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a style="cursor: pointer" (click)="storeData()">Save Data</a></li>
