--- a/courseProject/src/app/recipe/recipe-edit/recipe-edit.component.html
+++ b/courseProject/src/app/recipe/recipe-edit/recipe-edit.component.html
@@ -1,1 +1,50 @@
-<p>recipe-edit works!</p>
+<div class="row">
+	<div class="col-xs-12">
+		<form (ngSubmit)="onAddClick(f)" #f="ngForm">
+			<div class="row">
+				<div class="col-xs-6 form-group">
+					<label for="Name">Recipe name</label>
+				</div>
+				<div class="col-xs-6 form-group">
+					<input type="text" class="form-control" id="name" ngModel name="name" required #name="ngModel">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-6 form-group">
+					<label for="Description">Recipe Description</label>
+				</div>
+				<div class="col-xs-6 form-group">
+					<input type="textarea" class="form-control" id="description" ngModel name="description" required
+						#description="ngModel">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-6 form-group">
+					<label for="Image">Recipe Image</label>
+				</div>
+				<div class="col-xs-6 form-group">
+					<input type="url" class="form-control" id="imgUrl" ngModel name="imgUrl" required
+						#imgUrl="ngModel" pattern="https?://.+" >
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-12">
+					<div class="row">
+						<div class="col-xs-4">
+							<button type="submit" class="btn btn-success"
+								[disabled]="!f.valid">{{ (editMode)?'Update':'Add' }}</button>
+						</div>
+						<div class="col-xs-4" *ngIf="editMode"><button type="button" class="btn btn-danger"
+								(click)="onDelete(f)">Delete</button></div>
+						<div class="col-xs-4">
+							<button type="button" class="btn btn-primary" (click)="onClear(f)">Clear</button>
+						</div>
+					</div>
+
+
+
+				</div>
+			</div>
+		</form>
+	</div>
+</div>
